# kairobot

src/kairobot_project/kairobot/: CMakeLists.txt  README.md  package.xml
src/kairobot_project/kairobot/env/: install.sh
src/kairobot_project/kairobot/include/: kai_base.h
src/kairobot_project/kairobot/launch/: auto_slam.launch  bringup.launch  hector_slam.launch  karto_slam.launch  lidar_slam.launch  move_base.launch  multi_goals.launch  navigate.launch  navigate_multi.launch  navigate_rviz.launch  slam_rviz.launch
src/kairobot_project/kairobot/launch/lidar/: flashlidar.launch  g4lidar.launch  hlds.launch  lidar_laser.launch  rplidar.launch  (+2 more)
src/kairobot_project/kairobot/maps/: 2gundarlt6.pgm  2gundarlt6.yaml  Health_RetailService_Robot_ROOM.pgm  Health_RetailService_Robot_ROOM.yaml  cartographer_map.sh  gundarlt6.pgm  gundarlt6.yaml  lt6gundar.pgm  lt6gundar.yaml  map.sh  revisiMapt6.pgm  revisiMapt6.yaml
src/kairobot_project/kairobot/path/: Rx1.txt  Rx2.txt  Rx3.txt  Rx4.txt  Rx5.txt  Ry1.txt  Ry2.txt  Ry3.txt  Ry4.txt  Ry5.txt  Rz1.txt  Rz2.txt  Rz3.txt  Rz4.txt  Rz5.txt  log.txt
src/kairobot_project/kairobot/rviz/: navigate.rviz  odm.rviz
src/kairobot_project/kairobot/script/: add_coordinat.py  coba.py  desti.py  desti2_edited.py  gpio.py  input.py  inputmentah.py  leonardo_serial_test.py  multi_goals.py  neon.py  pathing_auto.py  ptp.py  savemap.py  testing_serial.py  way_point.py
src/kairobot_project/kairobot/src/: kai_base.cpp  kai_base_node.cpp  send_goals.cpp  serial_example_node.cpp
src/kairobot_project/kairobot/urdf/: kairobot.urdf
(+89 files in other folders)
